# ws_RAMS

./: README.md
install/: setup.bash  setup.ps1  setup.sh  setup.zsh
install/rams_interface/include/rams_interface/rams_interface/msg/: rosidl_typesupport_fastrtps_c__visibility_control.h
install/rams_interface/include/rams_interface/rams_interface/srv/: move_to_pose.h
install/rams_interface/include/rams_interface/rams_interface/srv/detail/: move_to_pose__functions.c  move_to_pose__functions.h  move_to_pose__rosidl_typesupport_fastrtps_cpp.hpp  move_to_pose__struct.h  move_to_pose__type_support.cpp
install/rams_interface/lib/rams_interface/: gui_node  move_to_pose_server
install/rams_interface/local/lib/python3.10/dist-packages/rams_interface/: _rams_interface_s.ep.rosidl_typesupport_introspection_c.c
install/rams_interface/share/rams_interface/: local_setup.dsv  package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/rams_interface/share/rams_interface/cmake/: ament_cmake_export_include_directories-extras.cmake  export_rams_interface__rosidl_generator_cExport-noconfig.cmake  export_rams_interface__rosidl_generator_pyExport-noconfig.cmake  export_rams_interface__rosidl_typesupport_fastrtps_cppExport-noconfig.cmake  export_rams_interface__rosidl_typesupport_fastrtps_cppExport.cmake  rams_interfaceConfig.cmake  rams_interface__rosidl_typesupport_cppExport-noconfig.cmake  rams_interface__rosidl_typesupport_introspection_cExport.cmake  rams_interface__rosidl_typesupport_introspection_cppExport-noconfig.cmake
install/rams_interface/share/rams_interface/launch/: move_to_pose_server.launch.py
install/rams_perception/lib/rams_perception/: perception_node
install/rams_perception/share/ament_index/resource_index/package_run_dependencies/: rams_perception
install/rams_perception/share/rams_perception/: local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/workcell_config/share/workcell_config/config/: sensors_3d.yaml  workcell.srdf
install/workcell_description/share/ament_index/resource_index/parent_prefix_path/: workcell_description
install/workcell_description/share/workcell_description/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/workcell_description/share/workcell_description/launch/: robot_viz.launch.py
install/workcell_description/share/workcell_description/urdf/: workcell.urdf  workcell.urdf.xacro
install/workcell_description/share/workcell_description/urdf/materials/: common_materials.xacro
install/workcell_description/share/workcell_description/urdf/props/: common_props.xacro
install/workcell_description/share/workcell_description/urdf/robots/: irb6700_200_260.xacro
log/: latest_build
src/rams_interface/: CMakeLists.txt  package.xml
src/rams_interface/include/rams_interface/: main_window.h
src/rams_interface/launch/: gui.launch  gui.launch.py  move_interface.launch  system_bringup.launch.py
src/rams_interface/src/: main.cpp  main_window.cpp  move_to_pose_server.cpp
src/rams_perception/: CMakeLists.txt  package.xml
src/rams_perception/include/rams_perception/: perception_server.hpp
src/rams_perception/install/: local_setup.sh  setup.sh
src/rams_perception/install/rams_perception/share/rams_perception/: package.bash  package.zsh
src/rams_perception/launch/: perception.launch  perception.launch.py
src/rams_perception/log/: latest_build
src/rams_perception/src/: perception_node.cpp  perception_server.cpp
src/rams_perception/srv/: region_to_goal.srv
src/workcell_config/: CMakeLists.txt
src/workcell_config/config/: sensors_3d.yaml  workcell.ros2_control.xacro  workcell.urdf.xacro
src/workcell_description/: CMakeLists.txt
src/workcell_description/launch/: description.launch.py
src/workcell_description/meshes/actuators/visual/: spindle.STL
src/workcell_description/urdf/: workcell.urdf.xacro
src/workcell_description/urdf/actuators/: spindle.xacro
src/workcell_description/urdf/materials/: common_materials.xacro
src/workcell_description/urdf/props/: common_props.xacro
src/workcell_description/urdf/robots/: irb6700_200_260.xacro
